k8s/gateways/overlays/rec/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateways-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - host: rec-gw.gostoa.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stoa-gateway
                port:
                  number: 8080
    - host: rec-kong.gostoa.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stoa-sidecar-kong
                port:
                  number: 8080
    - host: rec-wm.gostoa.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stoa-sidecar-webmethods
                port:
                  number: 8080
